# mdocx

./: README.md  pyproject.toml  template.docx  test.md  test_out.docx
src/mdocx/: main.py
